--- a/TP4/pom.xml
+++ b/TP4/pom.xml
@@ -38,6 +38,9 @@
                 <version>3.10.1</version>
                 <configuration>
                     <release>19</release>
+                    <compilerArgs>
+                        <compilerArg>--enable-preview</compilerArg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
 
